--- a/package.json
+++ b/package.json
@@ -136,7 +136,6 @@
     "lodash.get": "4.4.2",
     "lodash.set": "4.3.2",
     "lodash.startswith": "4.2.1",
-    "node-sass": "4.13.1",
     "npm-check-updates": "4.1.1",
     "prismjs": "1.25.0",
     "prop-types": "15.7.2",
@@ -173,6 +172,7 @@
     "ncp": "2.0.0",
     "prettier": "2.0.4",
     "pretty-quick": "2.0.1",
-    "puppeteer": "5.5.0"
+    "puppeteer": "5.5.0",
+    "node-sass": "4.13.1"
   }
 }
